[package]
name = "vtable"
version = "1.0.0"
authors = ["incredibleplays"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }


[patch.crates-io]
indexmap = { git = "https://github.com/indexmap-rs/indexmap", tag = "1.2.0", features = ["serde-1"] }


[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1


